- added improved advanced search in subcategories (Thorsten)
- added possibility to close and delete open questions (Peter Caesar)
- added possibility to delete multiple open questions (Thorsten)
- added user control panel (Thorsten)
- added support for Composer (Thorsten)
- added online verification check (Thorsten, Florian)
- added configurable maintenance mode (Thorsten)
- dropped support for IBM DB2, Interbase/Firebird and Sybase (Thorsten)
- improved usability of administration backend (Thorsten)
- improved setup and update (Thorsten, Florian)
- improved security with salted passwords (Thorsten)
- improved CSS development with LESS (Thorsten)
- simplified the link verification (Thorsten)
- updated bundled jQuery to version 1.8.0 (Thorsten)
- updated bundled Modernizr to version 2.6.1 (Thorsten)
- updated bundled Twitter Bootstrap to version 2.1.0 (Thorsten)
- fixed some bugs (Thorsten, Florian)

Version 2.7.9 - 2012-09-
- updated French translation

Version 2.7.8 - 2012-08-22
- added experimental rewrite rules for Zeus Webserver (Chris Crawshaw)
- updated Arabic translation
- updated Dutch translation
- updated Spanish translation (Lisandro López Villatoro)
- improved LDAP handling (Thorsten)
- fixed some bugs (Thorsten)

Version 2.7.7 - 2012-07-01
- added Bosnian translation (Alen Durmo)
- improved complete PDF export (Thorsten)
- updated Polish translation
- updated Simplified Chinese translation
- fixed Arabian and Bengali translation (Thorsten)
- fixed some bugs (Thorsten)
>>>>>>> e0ef4a52cee2a0f96a18ba1b10149218f7956cc0

Version 2.7.6 - 2012-05-16
- updated Dutch translation
- updated Polish translation
- updated Russian translation
- fixed some bugs (Thorsten)

Version 2.7.5 - 2012-04-14
- fixed serious security issue in bundled ImageManager library (Thorsten)
- full support for Microsoft SQL Server Driver for PHP (Thorsten)
- added online verification check (Thorsten, Florian)
- added experimental support for SQLite3 (Thorsten)